--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rollup-plugin-external-globals": "0.7.3",
     "terser": "5.17.1",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
