--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "5.0.0",
     "rollup-plugin-external-globals": "0.7.3",
     "terser": "5.17.1",
     "vue": "3.2.47",
