调整流水线

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
       - name: Build
         run: 
           npm run build
+      - name: 404
+        run: 
           cp dist/index.html dist/404.html
       - name: Setup Pages
         uses: actions/configure-pages@v3
