--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "element-plus": "2.3.4",
     "gh-pages": "5.0.0",
     "vue": "3.2.37",
     "vue-router": "4"
