--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "element-plus": "2.3.4",
@@ -20,6 +22,7 @@
     "@vitejs/plugin-vue": "3.1.0",
     "typescript": "4.6.4",
     "vite": "3.1.0",
-    "vue-tsc": "0.40.4"
+    "vue-tsc": "0.40.4",
+    "vuepress": "2.0.0-beta.61"
   }
 }
