--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,19 +41,23 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
+      # - name: Build
+      #   run: 
+      #     npm run build
+      # - name: 404
+      #   run: 
+      #     cp dist/index.html dist/404.html
       - name: Build
         run: 
-          npm run build
-      - name: 404
-        run: 
-          cp dist/index.html dist/404.html
+          npm run docs:build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload dist repository
-          path: './dist'
+          # Upload dist repository 
+          # path: './dist'
+          path: './docs/.vuepress/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
