--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,44 +20,52 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
-jobs:
-  # 单次部署的工作描述
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: echo filepath
-        run: |
-          pwd
-          ls -al
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm install
-      # - name: Build
-      #   run: 
-      #     npm run build
-      # - name: 404
-      #   run: 
-      #     cp dist/index.html dist/404.html
-      # - name: Build
-      #   run: 
-      #     npm run docs:build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload dist repository 
-          # path: './dist'
-          path: '/'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+version: 2
+updates:
+- package-ecosystem: npm
+  directory: "/"
+  schedule:
+    interval: daily
+  open-pull-requests-limit: 20
+
+# jobs:
+#   # 单次部署的工作描述
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: echo filepath
+#         run: |
+#           pwd
+#           ls -al
+#       - name: Checkout
+#         uses: actions/checkout@v3
+#       - name: Set up Node
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#           cache: 'npm'
+#       - name: Install dependencies
+#         run: npm install
+#       # - name: Build
+#       #   run: 
+#       #     npm run build
+#       # - name: 404
+#       #   run: 
+#       #     cp dist/index.html dist/404.html
+#       # - name: Build
+#       #   run: 
+#       #     npm run docs:build
+#       - name: Setup Pages
+#         uses: actions/configure-pages@v3
+#       - name: Upload artifact
+#         uses: actions/upload-pages-artifact@v1
+#         with:
+#           # Upload dist repository 
+#           # path: './dist'
+#           path: '/'
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v1
