--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,20 +50,27 @@ jobs:
       - name: Build
         run: 
           npm run docs:build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
+      # - name: Setup Pages
+      #   uses: actions/configure-pages@v3
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v1
+      #   with:
           # Upload dist repository 
           # path: './dist'
-          path: './docs/.vuepress/dist'
+          # path: './docs/.vuepress/dist'
+      # - name: Deploy to GitHub Pages
+      #   id: deployment
+      #   uses: actions/deploy-pages@v1
+      #   with:
+      #     repo: vuepress/vuepress.github.io
+      #     target_branch: master
+      #     publish_branch: gh-pages
+      #     cname: tff.cn
+      #     build_dir: './docs/.vuepress/dist'
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          repo: vuepress/vuepress.github.io
-          target_branch: master
+          github_token: ${{secrets.BLOG_GITHUB_TOKEN}}
           publish_branch: gh-pages
           cname: tff.cn
-          build_dir: './docs/.vuepress/dist'
+          publish_dir: ./docs/.vuepress/dist
