--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,9 +68,13 @@ jobs:
       #     cname: tff.cn
       #     build_dir: './docs/.vuepress/dist'
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{secrets.BLOG_GITHUB_TOKEN}}
-          publish_branch: gh-pages
-          cname: tff.cn
-          publish_dir: ./docs/.vuepress/dist
+        run: |
+          cd ./src/.vuepress/dist/
+          echo tff.cn > CNAME  
+          echo > .nojekyll
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global init.defaultBranch master
+          git init
+          git add -A
+          git commit -m "Auto Deploy"
+          git push -f "https://${GITHUB_ACTOR}:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
