--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,13 +60,17 @@ jobs:
       #   id: deployment
       #   uses: actions/deploy-pages@v1
       - name: Deploy to GitHub Pages
+        with:
+          github_token: ${{ secrets.ACCESS_TOKEN }}
         run: |
           cd ./docs/.vuepress/dist/
           echo tff.cn > CNAME  
           echo > .nojekyll
           git config --global user.name "LPTFF"
+          git config --global user.email lptffhh@gmail.com
           git config --global init.defaultBranch master
           git init
           git add -A
           git commit -m "Auto Deploy"
+          git remote set-url origin git@github.com:eurydyce/MDANSE.git
           git push -f "https://LPTFF:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
