--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,6 @@ jobs:
       #   id: deployment
       #   uses: actions/deploy-pages@v1
       - name: Deploy to GitHub Pages
-        with:
-          github_token: ${{ secrets.ACCESS_TOKEN }}
         run: |
           cd ./docs/.vuepress/dist/
           echo tff.cn > CNAME  
@@ -74,3 +72,5 @@ jobs:
           git commit -m "Auto Deploy"
           git remote set-url origin git@github.com:eurydyce/MDANSE.git
           git push -f "https://LPTFF:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
