--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,16 +60,11 @@ jobs:
       #   id: deployment
       #   uses: actions/deploy-pages@v1
       - name: Deploy to GitHub Pages
-        run: |
-          cd ./docs/.vuepress/dist/
-          echo tff.cn > CNAME  
-          echo > .nojekyll
-          git config --global user.name "LPTFF"
-          git config --global user.email lptffhh@gmail.com
-          git config --global init.defaultBranch master
-          git init
-          git add -A
-          git commit -m "Auto Deploy"
-          git push -f "https://LPTFF:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          # 部署到 gh-pages 分支
+          target_branch: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          build_dir: docs/.vuepress/dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
