--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,7 @@ on:
   workflow_dispatch:      
 
 # 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages。
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+permissions: read-all
 
 # 允许一个并发的部署
 concurrency:
