--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,10 @@ on:
   workflow_dispatch:      
 
 # 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages。
-permissions: read-all
+permissions: 
+  contents: write
+  pages: write
+  id-token: write
 
 # 允许一个并发的部署
 concurrency:
