--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "@types/node": "18.16.0",
     "@vitejs/plugin-vue": "3.1.0",
+    "rollup-plugin-visualizer": "5.9.0",
     "typescript": "4.6.4",
     "vite": "3.1.0",
+    "vite-plugin-compression": "0.5.1",
     "vue-tsc": "0.40.4",
     "vuepress": "2.0.0-beta.61"
   }
