--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,5 +66,6 @@ jobs:
           target_branch: gh-pages
           # 部署目录为 VuePress 的默认输出目录
           build_dir: docs/.vuepress/dist
+          domain: tangff.life
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
