--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,9 +47,9 @@ jobs:
       # - name: 404
       #   run: 
       #     cp dist/index.html dist/404.html
-      - name: Build
-        run: 
-          npm run docs:build
+      # - name: Build
+      #   run: 
+      #     npm run docs:build
       # - name: Setup Pages
       #   uses: actions/configure-pages@v3
       # - name: Upload artifact
@@ -59,12 +59,21 @@ jobs:
       # - name: Deploy to GitHub Pages
       #   id: deployment
       #   uses: actions/deploy-pages@v1
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.2.0
-        with:
-          # 部署到 gh-pages 分支
-          target_branch: gh-pages
-          # 部署目录为 VuePress 的默认输出目录
-          build_dir: docs/.vuepress/dist
+      # - name: Deploy to GitHub Pages
+      #   uses: crazy-max/ghaction-github-pages@v2.2.0
+      #   with:
+      #     # 部署到 gh-pages 分支
+      #     target_branch: gh-pages
+      #     # 部署目录为 VuePress 的默认输出目录
+      #     build_dir: docs/.vuepress/dist
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and Deploy
+        uses: jenkey2011/vuepress-deploy@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TARGET_REPO: LPTFF/lptff.github.io
+          TARGET_BRANCH: gh_pages
+          BUILD_SCRIPT: yarn && yarn build
+          BUILD_DIR: docs/.vuepress/dist
+          CNAME: https://tangff.life
