--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,8 @@ jobs:
       - name: Deploy  
         run: |
           cd ./docs/.vuepress/dist/
-          # echo tangff.life > CNAME  
-          # echo > .nojekyll
+          echo lptff.github.io > CNAME  
+          echo > .nojekyll
           git config --global user.email "lptffhh@gmail.com"
           git config --global user.name "LPTFF"
           git config --global init.defaultBranch master
