--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Deploy  
         run: |
           cd ./docs/.vuepress/dist/
-          echo lptff.github.io > CNAME  
+          echo tangff.life > CNAME  
           echo > .nojekyll
           git config --global user.email "lptffhh@gmail.com"
           git config --global user.name "LPTFF"
