--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       #   uses: actions/deploy-pages@v1 
       - name: Deploy  
         run: |
-          cd ./docs/.vuepress/dist/
+          cd ./src/.vuepress/dist/
           echo lptff.github.io > CNAME  
           echo > .nojekyll
           git config --global user.email "lptffhh@gmail.com"
