--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist",
+    "deploy": "bash deploy.sh",
     "serve": "vuepress dev src",
     "build": "vuepress build src"
   },
