规范自动化部署时间戳

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           git config --global init.defaultBranch master
           git init
           git add -A
-          git commit -m "Auto Deploy"
+          git commit -m $(date +%F日%H时%M分%S秒)
           git push -f "https://LPTFF:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" HEAD:gh-pages
       # - name: Deploy to GitHub Pages
       #   uses: crazy-max/ghaction-github-pages@v2.2.0
