--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vuepress build src"
   },
   "dependencies": {
+    "axios": "1.4.0",
     "element-plus": "2.3.4",
     "gh-pages": "5.0.0",
     "vue": "3.2.47",
