完成豆瓣页面展示

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "1.4.0",
     "element-plus": "2.3.4",
+    "file-saver": "2.0.5",
     "gh-pages": "5.0.0",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
