--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,8 @@ jobs:
       #     cp dist/index.html dist/404.html
       - name: Build
         run: 
-          npm run build
+          ./build.sh
+          # npm run build
       # - name: Setup Pages
       #   uses: actions/configure-pages@v3
       # - name: Upload artifact
