--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "1.4.0",
     "element-plus": "2.3.4",
-    "file-saver": "2.0.5",
     "gh-pages": "5.0.0",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
@@ -20,6 +19,7 @@
   "devDependencies": {
     "@types/node": "18.16.0",
     "@vitejs/plugin-vue": "3.1.0",
+    "eruda": "3.0.0",
     "rollup-plugin-visualizer": "5.9.0",
     "typescript": "4.6.4",
     "vite": "3.1.0",
