--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       #   run: 
       #     cp dist/index.html dist/404.html
       - name: Build
-        run:
+        run: |
           chmod +x build.sh
           ./build.sh
           # npm run build
