--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 # Simple workflow for deploying static content to GitHub Pages
 name: CI
 on:
+  # 设置定时任务
+  schedule:
+    - cron: '0 9 * * *'  # 每天的 UTC 01:00（北京时间下午五点）执行定时任务
   # 仅在推送到默认分支时运行。
   push:
     branches: 
