添加多个定时任务

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,9 @@ name: CI
 on:
   # 设置定时任务
   schedule:
-    - cron: '0 9 * * *'  # 每天的 UTC 01:00（北京时间下午五点）执行定时任务
+    - cron: '0 3 * * *'  # 每天的 UTC 03:00（北京时间上午11点）执行任务
+    - cron: '0 9 * * *'  # 每天的 UTC 09:00（北京时间下午5点）执行任务
+    - cron: '0 15 * * *' # 每天的 UTC 15:00（北京时间晚上11点）执行任务
   # 仅在推送到默认分支时运行。
   push:
     branches: 
