--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.4.0",
     "element-plus": "2.3.4",
     "gh-pages": "5.0.0",
+    "puppeteer": "20.5.0",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
   },
