修复流水线报错

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
-    "src/**/*.vue"
+    "src/**/*.vue",
+    "env.d.ts",
+    "../../../utils/utils"
   ],
   "references": [
     {
