--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
     "skipLibCheck": true,
     "types": [
       "element-plus/global"
-    ]
+    ],
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true
   },
   "include": [
     "src/**/*.ts",
@@ -25,7 +33,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "env.d.ts",
-    "../../../utils/utils"
+    "../../../utils/utils",
+    "../../../public/data/leetCode.json"
   ],
   "references": [
     {
