解决流水线报错

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,15 +17,7 @@
     "skipLibCheck": true,
     "types": [
       "element-plus/global"
-    ],
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true
+    ]
   },
   "include": [
     "src/**/*.ts",
@@ -33,8 +25,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "env.d.ts",
-    "../../../utils/utils",
-    "../../../public/data/leetCode.json"
+    "../../../utils/utils"
   ],
   "references": [
     {
