删除冗余文件

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "github-pages",
+  "name": "tangff-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "preview": "vite preview",
-    "deploy": "bash deploy.sh",
     "serve": "vite",
     "build": "vue-tsc --noEmit && vite build"
   },
