--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "element-plus/global"
+      "element-plus/global",
+      "vite/client"
     ]
   },
   "include": [
