--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "env.d.ts",
+    "src/env.d.ts",
     "../../../utils/utils"
   ],
   "references": [
