--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,22 @@ jobs:
       - name: Deploy  
         run: |
           cd ./dist/
+          echo "<!DOCTYPE html>
+              <html lang=\"en\">
+
+              <head>
+                  <meta charset=\"UTF-8\" />
+                  <link rel=\"icon\" type=\"image/svg+xml\" href=\"/src/public/img/logo.jpg\" />
+                  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />
+                  <title>随风而逝</title>
+              </head>
+
+              <body>
+                  <div id=\"app\"></div>
+                  <script type=\"module\" src=\"/src/main.js\"></script>
+              </body>
+
+              </html>" > 404.html
           echo lptff.github.io > CNAME  
           echo > .nojekyll
           git config --global user.email "lptffhh@gmail.com"
