--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,19 +70,19 @@ jobs:
         run: |
           cd ./dist/
           echo "<!DOCTYPE html>
-              <html lang=\"en\">
-
+              <html lang="en">
               <head>
-                  <meta charset=\"UTF-8\" />
-                  <link rel=\"icon\" type=\"image/svg+xml\" href=\"/src/public/img/logo.jpg\" />
-                  <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />
-                  <title>随风而逝</title>
+                  <meta charset="UTF-8">
+                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <script>
+                sessionStorage.redirect = location.href;
+              </script>
+              <meta http-equiv="refresh" content="0;URL='/'"></meta>
               </head>
-
               <body>
-                  <div id=\"app\"></div>
-                  <script type=\"module\" src=\"/src/main.js\"></script>
+                  
               </body>
+
 
               </html>" > 404.html
           echo lptff.github.io > CNAME  
