--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tangff-website",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "preview": "vite preview",
     "serve": "vite",
@@ -24,6 +23,7 @@
     "typescript": "4.6.4",
     "vite": "3.1.0",
     "vite-plugin-compression": "0.5.1",
+    "vite-plugin-prerender": "1.0.8",
     "vue-tsc": "0.40.4"
   }
 }
