--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "2.3.6",
     "gh-pages": "5.0.0",
     "openai": "3.3.0",
+    "unplugin-vue-markdown": "0.24.1",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
   },
