--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -1,26 +1,82 @@
 [
-    {
-        "knowledgeType": "html",
-        "type": "warning",
-        "color": "rgb(243, 209, 158)",
-        "list": [
-            {
-                "desc": "为什么data属性是一个函数而不是一个对象？",
-                "markdownPath": "1",
-                "timestamp": 1692435757000
-            }
-        ]
-    },
-    {
-        "knowledgeType": "JavaScript",
-        "type": "success",
-        "color": "rgb(225, 243, 216)",
-        "list": [
-            {
-                "desc": "为什么data属性是一个函数而不是一个对象？",
-                "markdownPath": "1",
-                "timestamp": 1692435757000
-            }
-        ]
-    }
+  {
+    "knowledgeType": "html",
+    "type": "warning",
+    "color": "rgb(243, 209, 158)",
+    "list": [
+      {
+        "desc": "为什么data属性是一个函数而不是一个对象？",
+        "title": "为什么data属性是一个函数而不是一个对象？",
+        "markdownPath": "/javaScript/原型、原型链.md",
+        "timestamp": 1692435757000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "JavaScript",
+    "type": "success",
+    "color": "rgb(225, 243, 216)",
+    "list": [
+      {
+        "desc": "原型、原型链",
+        "title": "原型、原型链",
+        "markdownPath": "/javaScript/原型、原型链.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "常用继承方案",
+        "title": "常用继承方案",
+        "markdownPath": "/javaScript/常用继承方案.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "New 运算符做了哪些事情",
+        "title": "New 运算符做了哪些事情",
+        "markdownPath": "/javaScript/New 运算符做了哪些事情.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "js常见的数据类型",
+        "title": "js常见的数据类型",
+        "markdownPath": "/javaScript/js常见的数据类型.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "为什么 Symbol 和 bigInt 不支持 new",
+        "title": "为什么 Symbol 和 bigInt 不支持 new",
+        "markdownPath": "/javaScript/为什么 Symbol 和 bigInt 不支持 new.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "undefined 和 null",
+        "title": "undefined 和 null",
+        "markdownPath": "/javaScript/undefined 和 null.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "变量提升、暂时性死区、var、let、const",
+        "title": "变量提升、暂时性死区、var、let、const",
+        "markdownPath": "/javaScript/变量提升、暂时性死区、var、let、const.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "js事件流",
+        "title": "js事件流",
+        "markdownPath": "/javaScript/js事件流.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "js事件委托",
+        "title": "js事件委托",
+        "markdownPath": "/javaScript/js事件委托.md",
+        "timestamp": 1692435757000
+      },
+      {
+        "desc": "事件循环、宏任务、微任务",
+        "title": "事件循环、宏任务、微任务",
+        "markdownPath": "/javaScript/事件循环、宏任务、微任务.md",
+        "timestamp": 1692435757000
+      }
+    ]
+  }
 ]
