--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -18,6 +18,54 @@
     "color": "rgb(225, 243, 216)",
     "list": [
       {
+        "desc": "js事件循环执行循序",
+        "title": "js事件循环执行循序",
+        "markdownPath": "/javaScript/js事件循环执行循序.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "js宏任务包含哪些，并给出代码示例",
+        "title": "js宏任务包含哪些",
+        "markdownPath": "/javaScript/js宏任务包含哪些.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "js宏微任务包含哪些，并给出代码示例",
+        "title": "js宏微任务包含哪些",
+        "markdownPath": "/javaScript/js宏微任务包含哪些.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "async 和 await 是如何处理异步任务，并给出代码示例",
+        "title": "async 和 await 是如何处理异步任务",
+        "markdownPath": "/javaScript/async 和 await 是如何处理异步任务.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "requestAnimationFrame 既不是宏任务也不是微任务，并给出代码示例",
+        "title": "requestAnimationFrame 既不是宏任务也不是微任务",
+        "markdownPath": "/javaScript/requestAnimationFrame 既不是宏任务也不是微任务.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "this 指向问题，并给出代码示例",
+        "title": "this 指向问题",
+        "markdownPath": "/javaScript/this 指向问题.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "箭头函数和普通函数的区别，并给出代码示例",
+        "title": "箭头函数和普通函数的区别",
+        "markdownPath": "/javaScript/箭头函数和普通函数的区别.md",
+        "timestamp": 1692510687000
+      },
+      {
+        "desc": "call、apply、bind的区别，并给出代码示例",
+        "title": "call、apply、bind的区别",
+        "markdownPath": "/javaScript/call、apply、bind的区别.md",
+        "timestamp": 1692510687000
+      },
+      {
         "desc": "原型、原型链",
         "title": "原型、原型链",
         "markdownPath": "/javaScript/原型、原型链.md",
