优化代码结构

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -1,13 +1,13 @@
 [
   {
-    "knowledgeType": "html",
+    "knowledgeType": "vue",
     "type": "warning",
     "color": "rgb(243, 209, 158)",
     "list": [
       {
-        "desc": "为什么data属性是一个函数而不是一个对象？",
-        "title": "为什么data属性是一个函数而不是一个对象？",
-        "markdownPath": "/javaScript/原型、原型链.md",
+        "desc": "为什么data属性是一个函数而不是一个对象，并给出代码示例",
+        "title": "为什么data属性是一个函数而不是一个对象",
+        "markdownPath": "/vue/为什么data属性是一个函数而不是一个对象.md",
         "timestamp": 1692435757000
       }
     ]
