--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -5,7 +5,91 @@
     "color": "rgb(243, 209, 158)",
     "list": [
       {
-        "desc": "为什么data属性是一个函数而不是一个对象，并给出代码示例",
+        "desc": "面试官：说说你对vue的理解，并给出代码示例",
+        "title": "说说你对vue的理解",
+        "markdownPath": "/vue/说说你对vue的理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对双向绑定的理解，并给出代码示例",
+        "title": "说说你对双向绑定的理解",
+        "markdownPath": "/vue/说说你对双向绑定的理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对SPA（单页应用）的理解，并给出代码示例",
+        "title": "说说你对SPA（单页应用）的理解",
+        "markdownPath": "/vue/说说你对SPA（单页应用）的理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：Vue中的v-show和v-if怎么理解，并给出代码示例",
+        "title": "Vue中的v-show和v-if怎么理解",
+        "markdownPath": "/vue/Vue中的v-show和v-if怎么理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：Vue实例挂载的过程中发生了什么，并给出代码示例",
+        "title": "Vue实例挂载的过程中发生了什么",
+        "markdownPath": "/vue/Vue实例挂载的过程中发生了什么.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对Vue生命周期的理解，并给出代码示例",
+        "title": "说说你对Vue生命周期的理解",
+        "markdownPath": "/vue/说说你对Vue生命周期的理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：为什么Vue中的v-if和v-for不建议一起用，并给出代码示例",
+        "title": "为什么Vue中的v-if和v-for不建议一起用",
+        "markdownPath": "/vue/为什么Vue中的v-if和v-for不建议一起用.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：SPA（单页应用）首屏加载速度慢怎么解决，并给出代码示例",
+        "title": "SPA（单页应用）首屏加载速度慢怎么解决",
+        "markdownPath": "/vue/SPA（单页应用）首屏加载速度慢怎么解决.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：Vue中给对象添加新属性界面不刷新，并给出代码示例",
+        "title": "Vue中给对象添加新属性界面不刷新",
+        "markdownPath": "/vue/Vue中给对象添加新属性界面不刷新.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：Vue中组件和插件有什么区别，并给出代码示例",
+        "title": "Vue中组件和插件有什么区别",
+        "markdownPath": "/vue/Vue中组件和插件有什么区别.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：Vue组件间通信方式都有哪些，并给出代码示例",
+        "title": "Vue组件间通信方式都有哪些",
+        "markdownPath": "/vue/Vue组件间通信方式都有哪些.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对nexttick的理解，并给出代码示例",
+        "title": "说说你对nexttick的理解",
+        "markdownPath": "/vue/说说你对nexttick的理解.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对vue的mixin的理解，有什么应用场景，并给出代码示例",
+        "title": "说说你对vue的mixin的理解，有什么应用场景",
+        "markdownPath": "/vue/说说你对vue的mixin的理解，有什么应用场景.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：说说你对slot的理解，slot使用场景有哪些，并给出代码示例",
+        "title": "说说你对slot的理解，slot使用场景有哪些",
+        "markdownPath": "/vue/说说你对slot的理解，slot使用场景有哪些.md",
+        "timestamp": 1692586104000
+      },
+      {
+        "desc": "面试官：为什么data属性是一个函数而不是一个对象，并给出代码示例",
         "title": "为什么data属性是一个函数而不是一个对象",
         "markdownPath": "/vue/为什么data属性是一个函数而不是一个对象.md",
         "timestamp": 1692435757000
