新增八股文

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -1,9 +1,111 @@
 [
   {
-    "knowledgeType": "vue",
+    "knowledgeType": "vue2系列",
     "type": "warning",
     "color": "rgb(243, 209, 158)",
     "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：怎么缓存当前的组件，缓存后怎么更新，说说你对keep-alive的理解是什么，并给出代码示例",
+        "title": "怎么缓存当前的组件，缓存后怎么更新，说说你对keep-alive的理解是什么",
+        "markdownPath": "/vue/怎么缓存当前的组件，缓存后怎么更新，说说你对keep-alive的理解是什么.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue常用的修饰符有哪些，有什么应用场景，并给出代码示例",
+        "title": "Vue常用的修饰符有哪些，有什么应用场景",
+        "markdownPath": "/vue/Vue常用的修饰符有哪些，有什么应用场景.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你有写过自定义指令吗，自定义指令的应用场景有哪些，并给出代码示例",
+        "title": "你有写过自定义指令吗，自定义指令的应用场景有哪些",
+        "markdownPath": "/vue/你有写过自定义指令吗，自定义指令的应用场景有哪些.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue中的过滤器了解吗，过滤器的应用场景有哪些，并给出代码示例",
+        "title": "Vue中的过滤器了解吗，过滤器的应用场景有哪些",
+        "markdownPath": "/vue/Vue中的过滤器了解吗，过滤器的应用场景有哪些.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：什么是虚拟DOM，如何实现一个虚拟DOM，说说你的思路，并给出代码示例",
+        "title": "什么是虚拟DOM，如何实现一个虚拟DOM，说说你的思路",
+        "markdownPath": "/vue/什么是虚拟DOM，如何实现一个虚拟DOM，说说你的思路.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：了解过vue中的diff算法吗，说说看，并给出代码示例",
+        "title": "了解过vue中的diff算法吗，说说看",
+        "markdownPath": "/vue/了解过vue中的diff算法吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue项目中有封装过axios吗，怎么封装的，并给出代码示例",
+        "title": "Vue项目中有封装过axios吗，怎么封装的",
+        "markdownPath": "/vue/Vue项目中有封装过axios吗，怎么封装的.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你了解Axios的原理吗，有看过它的源码吗，并给出代码示例",
+        "title": "你了解Axios的原理吗，有看过它的源码吗",
+        "markdownPath": "/vue/你了解Axios的原理吗，有看过它的源码吗.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：SSR解决了什么问题，有做过SSR吗，你是怎么做的，并给出代码示例",
+        "title": "SSR解决了什么问题，有做过SSR吗，你是怎么做的",
+        "markdownPath": "/vue/SSR解决了什么问题，有做过SSR吗，你是怎么做的.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：说下你的Vue项目的目录结构，如果是大型项目你该怎么划分结构和划分组件呢，并给出代码示例",
+        "title": "说下你的Vue项目的目录结构，如果是大型项目你该怎么划分结构和划分组件呢",
+        "markdownPath": "/vue/说下你的Vue项目的目录结构，如果是大型项目你该怎么划分结构和划分组件呢.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue要做权限管理该怎么做，控制到按钮级别的权限怎么做，并给出代码示例",
+        "title": "Vue要做权限管理该怎么做，控制到按钮级别的权限怎么做",
+        "markdownPath": "/vue/Vue要做权限管理该怎么做，控制到按钮级别的权限怎么做.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：跨域是什么，Vue项目中你是如何解决跨域的呢，并给出代码示例",
+        "title": "跨域是什么，Vue项目中你是如何解决跨域的呢",
+        "markdownPath": "/vue/跨域是什么，Vue项目中你是如何解决跨域的呢.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue项目如何部署，有遇到布署服务器后刷新404问题吗，并给出代码示例",
+        "title": "Vue项目如何部署，有遇到布署服务器后刷新404问题吗",
+        "markdownPath": "/vue/Vue项目如何部署，有遇到布署服务器后刷新404问题吗.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么处理vue项目中的错误的，并给出代码示例",
+        "title": "你是怎么处理vue项目中的错误的",
+        "markdownPath": "/vue/你是怎么处理vue项目中的错误的.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue3有了解过吗，能说说跟Vue2的区别吗，并给出代码示例",
+        "title": "Vue3有了解过吗，能说说跟Vue2的区别吗",
+        "markdownPath": "/vue/Vue3有了解过吗，能说说跟Vue2的区别吗.md",
+        "timestamp": 1692613874000
+      },
       {
         "desc": "面试官：说说你对vue的理解，并给出代码示例",
         "title": "说说你对vue的理解",
@@ -93,6 +195,116 @@
         "title": "为什么data属性是一个函数而不是一个对象",
         "markdownPath": "/vue/为什么data属性是一个函数而不是一个对象.md",
         "timestamp": 1692435757000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "vue3系列",
+    "type": "danger",
+    "color": "rgb(253, 226, 226)",
+    "list": [
+      {
+        "desc": "面试官：Vue3.0的设计目标是什么，做了哪些优化，并给出代码示例",
+        "title": "Vue3.0的设计目标是什么，做了哪些优化",
+        "markdownPath": "/vue3/Vue3.0的设计目标是什么，做了哪些优化.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue3.0 性能提升主要是通过哪几方面体现的，并给出代码示例",
+        "title": "Vue3.0 性能提升主要是通过哪几方面体现的",
+        "markdownPath": "/vue3/Vue3.0 性能提升主要是通过哪几方面体现的.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue3.0里为什么要用 Proxy API 替代 defineProperty API，并给出代码示例",
+        "title": "Vue3.0里为什么要用 Proxy API 替代 defineProperty API",
+        "markdownPath": "/vue3/Vue3.0里为什么要用 Proxy API 替代 defineProperty API.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：Vue3.0 所采用的 Composition Api 与 Vue2.x 使用的 Options Api 有什么不同，并给出代码示例",
+        "title": "Vue3.0 所采用的 Composition Api 与 Vue2.x 使用的 Options Api 有什么不同",
+        "markdownPath": "/vue3/Vue3.0 所采用的 Composition Api 与 Vue2.x 使用的 Options Api 有什么不同.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：说说Vue 3.0中Treeshaking特性，并给出代码示例",
+        "title": "说说Vue 3.0中Treeshaking特性",
+        "markdownPath": "/vue3/说说Vue 3.0中Treeshaking特性.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：用Vue3.0 写过组件吗，如果想实现一个 Modal你会怎么设计，并给出代码示例",
+        "title": "用Vue3.0 写过组件吗，如果想实现一个 Modal你会怎么设计",
+        "markdownPath": "/vue3/用Vue3.0 写过组件吗，如果想实现一个 Modal你会怎么设计.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "ES6系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：说说var、let、const之间的区别，并给出代码示例",
+        "title": "说说var、let、const之间的区别",
+        "markdownPath": "/ES6/说说var、let、const之间的区别.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：ES6中数组新增了哪些扩展，并给出代码示例",
+        "title": "ES6中数组新增了哪些扩展",
+        "markdownPath": "/ES6/ES6中数组新增了哪些扩展.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：ES6中对象新增了哪些扩展，并给出代码示例",
+        "title": "ES6中对象新增了哪些扩展",
+        "markdownPath": "/ES6/ES6中对象新增了哪些扩展.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：ES6中函数新增了哪些扩展，并给出代码示例",
+        "title": "ES6中函数新增了哪些扩展",
+        "markdownPath": "/ES6/ES6中函数新增了哪些扩展.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：ES6中新增的Set、Map两种数据结构怎么理解，并给出代码示例",
+        "title": "ES6中新增的Set、Map两种数据结构怎么理解",
+        "markdownPath": "/ES6/ES6中新增的Set、Map两种数据结构怎么理解.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么理解ES6中Promise以及它的使用场景，并给出代码示例",
+        "title": "你是怎么理解ES6中Promise以及它的使用场景",
+        "markdownPath": "/ES6/你是怎么理解ES6中Promise以及它的使用场景.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么理解ES6中Generator以及它的使用场景，并给出代码示例",
+        "title": "你是怎么理解ES6中Generator以及它的使用场景",
+        "markdownPath": "/ES6/你是怎么理解ES6中Generator以及它的使用场景.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么理解ES6中Proxy以及它的使用场景，并给出代码示例",
+        "title": "你是怎么理解ES6中Proxy以及它的使用场景",
+        "markdownPath": "/ES6/你是怎么理解ES6中Proxy以及它的使用场景.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么理解ES6中Module以及它的使用场景，并给出代码示例",
+        "title": "你是怎么理解ES6中Module以及它的使用场景",
+        "markdownPath": "/ES6/你是怎么理解ES6中Module以及它的使用场景.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你是怎么理解ES6中Decorator以及它的使用场景，并给出代码示例",
+        "title": "你是怎么理解ES6中Decorator以及它的使用场景",
+        "markdownPath": "/ES6/你是怎么理解ES6中Decorator以及它的使用场景.md",
+        "timestamp": 1692613874000
       }
     ]
   },
@@ -208,6 +420,63 @@
         "title": "事件循环、宏任务、微任务",
         "markdownPath": "/javaScript/事件循环、宏任务、微任务.md",
         "timestamp": 1692435757000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "CSS系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "HTTP系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "typescript系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
       }
     ]
   }
