新增ts八股文

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -467,16 +467,76 @@
     "color": "rgb(233, 233, 235)",
     "list": [
       {
-        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
-        "title": "Vue.observable你有了解过吗，说说看",
-        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
-        "timestamp": 1692613874000
+        "desc": "面试官：说说你对 typescript 的理解以及与 javascript 的区别，并给出代码示例",
+        "title": "说说你对 typescript 的理解以及与 javascript 的区别",
+        "markdownPath": "/typescript/说说你对 typescript 的理解以及与 javascript 的区别.md",
+        "timestamp": 1693123752000
       },
       {
-        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
-        "title": "你知道vue中key的原理吗，说说你对它的理解",
-        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
-        "timestamp": 1692613874000
+        "desc": "面试官：说说 typescript 的数据类型有哪些，并给出代码示例",
+        "title": "说说 typescript 的数据类型有哪些",
+        "markdownPath": "/typescript/说说 typescript 的数据类型有哪些.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中枚举类型的理解及其应用场景，并给出代码示例",
+        "title": "说说你对 TypeScript 中枚举类型的理解及其应用场景",
+        "markdownPath": "/typescript/说说你对 TypeScript 中枚举类型的理解及其应用场景.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中接口的理解及其应用场景，并给出代码示例",
+        "title": "说说你对 TypeScript 中接口的理解及其应用场景",
+        "markdownPath": "/typescript/说说你对 TypeScript 中接口的理解及其应用场景.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中类的理解及其应用场景，并给出代码示例",
+        "title": "说说你对 TypeScript 中类的理解及其应用场景",
+        "markdownPath": "/typescript/说说你对 TypeScript 中类的理解及其应用场景.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中函数的理解及其与 JavaScript 函数的区别，并给出代码示例",
+        "title": "说说你对 TypeScript 中函数的理解及其与 JavaScript 函数的区别",
+        "markdownPath": "/typescript/说说你对 TypeScript 中函数的理解及其与 JavaScript 函数的区别.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中泛型的理解及其应用场景，并给出代码示例",
+        "title": "说说你对 TypeScript 中泛型的理解及其应用场景",
+        "markdownPath": "/typescript/说说你对 TypeScript 中泛型的理解及其应用场景.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中高级类型的理解？有哪些？并给出代码示例",
+        "title": "说说你对 TypeScript 中高级类型的理解？有哪些？",
+        "markdownPath": "/typescript/说说你对 TypeScript 中高级类型的理解？有哪些？.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说你对 TypeScript 中装饰器的理解及其应用场景，并给出代码示例",
+        "title": "说说你对 TypeScript 中装饰器的理解及其应用场景",
+        "markdownPath": "/typescript/说说你对 TypeScript 中装饰器的理解及其应用场景.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说对 TypeScript 中命名空间与模块的理解及其区别，并给出代码示例",
+        "title": "说说对 TypeScript 中命名空间与模块的理解及其区别",
+        "markdownPath": "/typescript/说说对 TypeScript 中命名空间与模块的理解及其区别.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说如何在React项目中应用TypeScript，并给出代码示例",
+        "title": "说说如何在React项目中应用TypeScript",
+        "markdownPath": "/typescript/说说如何在React项目中应用TypeScript.md",
+        "timestamp": 1693123752000
+      },
+      {
+        "desc": "面试官：说说如何在Vue项目中应用TypeScript，并给出代码示例",
+        "title": "说说如何在Vue项目中应用TypeScript",
+        "markdownPath": "/typescript/说说如何在Vue项目中应用TypeScript.md",
+        "timestamp": 1693123752000
       }
     ]
   }
