新增es6八股文

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -309,7 +309,7 @@
     ]
   },
   {
-    "knowledgeType": "JavaScript",
+    "knowledgeType": "JavaScript系列",
     "type": "success",
     "color": "rgb(225, 243, 216)",
     "list": [
